--- a/labs/lab03/report/Makefile
+++ b/labs/lab03/report/Makefile
@@ -1,8 +1,17 @@
-all:
-	-@quarto render
+all: report.pdf report.docx
+
+report.pdf: report.md
+	pandoc report.md -o report.pdf \
+	--pdf-engine=xelatex \
+	-V mainfont="Liberation Serif" \
+	-V sansfont="Liberation Sans" \
+	-V monofont="Liberation Mono" \
+	-V geometry:margin=2.5cm
+
+report.docx: report.md
+	pandoc report.md -o report.docx
 
 clean:
-	-rm -rf _output
+	rm -f report.pdf report.docx
 
-cleanall: clean
-	-rm -rf .quarto
+.PHONY: all clean
